--- a/Rynoridge/home.html
+++ b/Rynoridge/home.html
@@ -21,15 +21,30 @@
       </header>
       <main>
         <section class="hero">
-          <img class="hero-background" src="images/Artur-Didyk-shutterstock_1187224183.jpg" alt="Hero Background" />
-          <div class="hero-text">
-            <h1>Rhinoridge</h1>
-            <p>
-              Rynoridge is your trusted partner for authentic winter adventures, where the spirit of the outdoors meets exceptional equipment. Our skis and snowboards are expertly crafted for those who chase the thrill of winter, designed to perform as hard as you do. We believe in gear that empowers you to explore untouched powder and conquer challenging terrain, while minimizing our impact with thoughtful design and sustainable practices. Rynoridge is your gateway to the mountains, where performance, style, and responsibility converge.
-            </p>
-            <div class="hero-buttons">
-              <button class="store-button">Shop</button>
-              <button class="action-button">Learn More</button>
+          <img
+            class="hero-background"
+            src="images/Artur-Didyk-shutterstock_1187224183.jpg"
+            alt="Hero Background"
+          />
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-back">
+                <p>
+                  Rynoridge is your trusted partner for authentic winter
+                  adventures, where the spirit of the outdoors meets exceptional
+                  equipment. Our gear is your gateway to the
+                  mountains, where performance, style, and responsibility
+                  converge. 
+                </p>
+                <div class="hero-buttons">
+                  <button class="store-button">Shop</button>
+                  <button class="action-button">Learn More</button>
+                </div>
+              </div>
+              <div class="flip-card-front">
+                <h1>Welcome to Rynoridge!</h1>
+                <p>Discover the best winter sports equipment on Earth</p>
+              </div>
             </div>
           </div>
         </section>
@@ -37,26 +52,72 @@
           <h2>Explore</h2>
           <div class="feature-cards">
             <div class="feature-card">
-              <img src="images/skiing-snowboarding-knee-injuries.jpg" alt="Feature 1" />
-              <h3></h3>
+              <img
+                src="images/skiing-snowboarding-knee-injuries.jpg"
+                alt="Feature 1"
+              />
+              <h3>Spectacular Skis</h3>
               <p class="short-text">
-                Rynoridge skis are engineered for the discerning skier, those who seek a blend of precision, power, and versatility on the mountain. We offer a diverse range of skis, from nimble carving skis designed for pristine groomers to robust all-mountain skis that conquer varied terrain, and floaty powder skis that excel in deep snow. Each pair is meticulously crafted with advanced construction techniques and premium materials, ensuring optimal performance and durability. We prioritize responsiveness and stability, allowing skiers to confidently tackle any slope, from steep descents to tight turns. Our designs embody a modern aesthetic, with eye-catching graphics that reflect the spirit of adventure. While performance remains paramount, we also integrate sustainable practices, subtly incorporating recycled materials where possible, demonstrating our commitment to responsible manufacturing. Rynoridge skis are built to elevate your skiing experience, empowering you to explore the mountains with confidence and style.
+                Rynoridge skis are engineered for the discerning skier, those
+                who seek a blend of precision, power, and versatility on the
+                mountain. We offer a diverse range of skis, from nimble carving
+                skis designed for pristine groomers to robust all-mountain skis
+                that conquer varied terrain, and floaty powder skis that excel
+                in deep snow. Each pair is meticulously crafted with advanced
+                construction techniques and premium materials, ensuring optimal
+                performance and durability. We prioritize responsiveness and
+                stability, allowing skiers to confidently tackle any slope, from
+                steep descents to tight turns. Our designs embody a modern
+                aesthetic, with eye-catching graphics that reflect the spirit of
+                adventure. While performance remains paramount, we also
+                integrate sustainable practices, subtly incorporating recycled
+                materials where possible, demonstrating our commitment to
+                responsible manufacturing. Rynoridge skis are built to elevate
+                your skiing experience, empowering you to explore the mountains
+                with confidence and style.
               </p>
               <a href="#" class="read-more">Read more</a>
             </div>
             <div class="feature-card">
-              <img src="images/102-les-2-alpes-automne-hiver-snowpark-640x640.jpg" alt="Feature 2" />
-              <h3>Medium length headline</h3>
+              <img
+                src="images/102-les-2-alpes-automne-hiver-snowpark-640x640.jpg"
+                alt="Feature 2"
+              />
+              <h3>Built to last</h3>
               <p class="short-text">
-                Rynoridge fuels your passion for the mountains with expertly crafted skis and snowboards, built for those who chase the thrill of winter. We believe in gear that performs as hard as you do, empowering you to explore untouched powder and conquer challenging terrain. While performance is paramount, we also strive to minimize our impact with thoughtful design and sustainable practices, including the use of recycled materials. Rynoridge is your trusted partner for authentic winter adventures, where the spirit of the outdoors meets exceptional equipment. Whether you’re carving up the slopes or seeking fresh lines in the backcountry, Rynoridge has you covered.
+                Rynoridge fuels your passion for the mountains with expertly
+                crafted skis and snowboards, built for those who chase the
+                thrill of winter. We believe in gear that performs as hard as
+                you do, empowering you to explore untouched powder and conquer
+                challenging terrain. Our skis and snowboards are expertly crafted for
+                those who chase the thrill of winter, designed to perform as
+                hard as you do. We believe in gear that empowers you to
+                explore untouched powder and conquer challenging terrain,
+                while minimizing our impact with thoughtful design and
+                sustainable practices.
               </p>
               <a href="#" class="read-more">Read more</a>
             </div>
             <div class="feature-card">
               <img src="images/snowboard-shaping.avif" alt="Feature 3" />
-              <h3>Quality snowboards</h3>
+              <h3>Superb Snowboards</h3>
               <p class="short-text">
-                Rynoridge snowboards are crafted for riders who demand performance and style in every turn. We build boards that cater to a variety of riding styles, from agile freestyle decks designed for park mastery to powerful freeride boards that excel in deep powder and challenging backcountry conditions. Each board is meticulously engineered with premium materials, focusing on responsiveness, durability, and a smooth, intuitive feel. We incorporate innovative designs that blend eye-catching aesthetics with functional features, ensuring riders not only perform at their best but also express their individuality on the slopes. While pushing the boundaries of performance, we also explore sustainable practices, subtly integrating recycled materials into select models, reflecting our commitment to both the rider and the environment. Rynoridge snowboards are built to elevate your riding experience, empowering you to explore the mountains with confidence and style.
+                Rynoridge snowboards are crafted for riders who demand
+                performance and style in every turn. We build boards that cater
+                to a variety of riding styles, from agile freestyle decks
+                designed for park mastery to powerful freeride boards that excel
+                in deep powder and challenging backcountry conditions. Each
+                board is meticulously engineered with premium materials,
+                focusing on responsiveness, durability, and a smooth, intuitive
+                feel. We incorporate innovative designs that blend eye-catching
+                aesthetics with functional features, ensuring riders not only
+                perform at their best but also express their individuality on
+                the slopes. While pushing the boundaries of performance, we also
+                explore sustainable practices, subtly integrating recycled
+                materials into select models, reflecting our commitment to both
+                the rider and the environment. Rynoridge snowboards are built to
+                elevate your riding experience, empowering you to explore the
+                mountains with confidence and style.
               </p>
               <a href="#" class="read-more">Read more</a>
             </div>
@@ -88,12 +149,14 @@
       </footer>
     </div>
     <script>
-      document.querySelectorAll('.read-more').forEach(button => {
-        button.addEventListener('click', function(e) {
+      document.querySelectorAll(".read-more").forEach((button) => {
+        button.addEventListener("click", function (e) {
           e.preventDefault();
           const paragraph = this.previousElementSibling;
-          paragraph.classList.toggle('expanded');
-          this.textContent = paragraph.classList.contains('expanded') ? 'Read less' : 'Read more';
+          paragraph.classList.toggle("expanded");
+          this.textContent = paragraph.classList.contains("expanded")
+            ? "Read less"
+            : "Read more";
         });
       });
     </script>
