--- a/Rynoridge/home.html
+++ b/Rynoridge/home.html
@@ -10,13 +10,14 @@
     <div id="content">
       <header>
         <div id="logo">
-          <img class="logo" src="images/Rhino logo.png" alt="Rynoridge Logo" />
+          <img class="logo" src="images/Rhinologo.png" alt="Rynoridge Logo" />
         </div>
-        <div id="nav">
+        <nav id="nav">
           <a href="page2.html">Store</a>
           <a href="page3.html">Gallery</a>
           <a href="page4.html">Blog</a>
           <a href="contactus.html">Contact Us</a>
+        </nav>
         </div>
       </header>
       <main>
@@ -37,7 +38,7 @@
                   converge. 
                 </p>
                 <div class="hero-buttons">
-                  <button class="store-button">Shop</button>
+                  <a href="page2.html" class="store-button">Shop</a>
                   <button class="action-button">Learn More</button>
                 </div>
               </div>
@@ -127,7 +128,7 @@
       <footer>
         <div id="footer">
           <div id="footertext">
-            <p>Rynoridge &copy; 2025 - Your Company Name</p>
+            <p>Rynoridge &copy; 2025</p>
             <p><a href="site-plan.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
           </div>
