--- a/Rynoridge/page4.html
+++ b/Rynoridge/page4.html
@@ -3,69 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rynoridge Home</title>
+    <title>Rynoridge Blog</title>
     <link rel="stylesheet" href="styles/styles.css" />
-    <p>Sign up for our newsletter for 10% off!</p>
   </head>
   <body>
     <div id="content">
       <header>
         <div id="logo">
-          <img class="logo" src="images\Rhino logo.png" alt="Rynoridge Logo" />
+          <img class="logo" src="images/Rhinologo.png" alt="Rynoridge Logo" />
         </div>
-        <div id="nav">
-          <a href="index.html">Link one</a>
-          <a href="page2.html">Link two</a>
-          <a href="site-plan.html">Link three</a>
-          <a href="contactus.html">Link four</a>
-        </div>
+        <nav id="nav">
+          <a href="home.html">Home</a>
+          <a href="page2.html">Store</a>
+          <a href="page3.html">Gallery</a>
+          <a href="page4.html">Blog</a>
+          <a href="contactus.html">Contact Us</a>
+        </nav>
       </header>
       <main>
         <section class="hero">
           <div class="hero-text">
-            <h1>Rhinoridge</h1>
-            <p>
-              Lorem ipsum dolor sit amet et delectus accommodare his consul
-              copiosae legendos at vix ad putent delectus delicata usu. Vidit
-              dissentiet eos cu eum an brute copiosae hendrerit. Eos erant
-              dolorum an. Per facer affert ut.
-            </p>
-            <div class="hero-buttons">
-              <button class="store-button">Placeholder</button>
-              <button class="action-button">Button</button>
-            </div>
-          </div>
-        </section>
-        <section class="features">
-          <h2>Tagline</h2>
-          <div class="feature-cards">
-            <div class="feature-card">
-              <img src="images/feature1.png" alt="Feature 1" />
-              <h3>Medium length headline</h3>
-              <p>
-                Lorem ipsum dolor sit amet et delectus accommodare his consul
-                copiosae.
-              </p>
-              <a href="#">Read more</a>
-            </div>
-            <div class="feature-card">
-              <img src="images/feature2.png" alt="Feature 2" />
-              <h3>Medium length headline</h3>
-              <p>
-                Lorem ipsum dolor sit amet et delectus accommodare his consul
-                copiosae.
-              </p>
-              <a href="#">Read more</a>
-            </div>
-            <div class="feature-card">
-              <img src="images/feature3.png" alt="Feature 3" />
-              <h3>Medium length headline</h3>
-              <p>
-                Lorem ipsum dolor sit amet et delectus accommodare his consul
-                copiosae.
-              </p>
-              <a href="#">Read more</a>
-            </div>
+            <h1>Rynoridge Blog</h1>
+            <p>Read stories and tips from our winter sports experts.</p>
           </div>
         </section>
       </main>
@@ -78,14 +37,14 @@
           </div>
           <div id="social">
             <a href="https://facebook.com" target="_blank">
-              <img src="images\20673.png" alt="Facebook" />
+              <img src="images/20673.png" alt="Facebook" />
             </a>
             <a href="https://twitter.com" target="_blank">
-              <img src="images\twitter-x-icon-png.png" alt="Twitter" />
+              <img src="images/twitter-x-icon-png.png" alt="Twitter" />
             </a>
             <a href="https://instagram.com" target="_blank">
               <img
-                src="images\instagram-circle-icon-size_256.png"
+                src="images/instagram-circle-icon-size_256.png"
                 alt="Instagram"
               />
             </a>
