--- a/Rynoridge/page3.html
+++ b/Rynoridge/page3.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rynoridge Gallery</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
+    <div id="content">
+      <header>
+        <div id="logo">
+          <img class="logo" src="images/Rhinologo.png" alt="Rynoridge Logo" />
+        </div>
+        <nav id="nav">
+          <a href="home.html">Home</a>
+          <a href="page2.html">Store</a>
+          <a href="page3.html">Gallery</a>
+          <a href="page4.html">Blog</a>
+          <a href="contactus.html">Contact Us</a>
+        </nav>
+      </header>
+      <main>
+        <section class="hero">
+          <div class="hero-text">
+            <h1>Rynoridge Gallery</h1>
+            <p>Discover breathtaking moments from our adventures.</p>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <div id="footer">
+          <div id="footertext">
+            <p>Rynoridge &copy; 2025 - Your Company Name</p>
+            <p><a href="site-plan.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+          </div>
+          <div id="social">
+            <a href="https://facebook.com" target="_blank">
+              <img src="images/20673.png" alt="Facebook" />
+            </a>
+            <a href="https://twitter.com" target="_blank">
+              <img src="images/twitter-x-icon-png.png" alt="Twitter" />
+            </a>
+            <a href="https://instagram.com" target="_blank">
+              <img
+                src="images/instagram-circle-icon-size_256.png"
+                alt="Instagram"
+              />
+            </a>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
