gallery page done

--- a/Rynoridge/page2.html
+++ b/Rynoridge/page2.html
@@ -20,22 +20,21 @@
         </nav>
       </header>
       <main>
-        <section class="hero">
-          <div class="hero-content">
-            <div class="hero-text">
-              <h1>Rynoridge Store</h1>
-              <p>
-                Welcome to Rynoridge, your one-stop shop for all things snowboarding! We offer a wide range of high-quality snowboards, gear, and accessories to help you hit the slopes in style. Whether you're a beginner or an experienced rider, we have everything you need to make the most of your winter adventures. Explore our collection and find the perfect gear for your next ride!
-              </p>
+        <div id="page2">
+          <section class="hero">
+            <div class="hero-content">
+              <div class="hero-text">
+                <h1>Rynoridge Store</h1>
+                <p>
+                  Welcome to Rynoridge, your one-stop shop for all things snowboarding! We offer a wide range of high-quality snowboards, gear, and accessories to help you hit the slopes in style. Whether you're a beginner or an experienced rider, we have everything you need to make the most of your winter adventures. Explore our collection and find the perfect gear for your next ride!
+                </p>
+              </div>
+              <div class="hero-image">
+                <img src="images/Wilderness_Whitetail_Limited_Edition_Skis-Product_Image.webp" alt="Hero Image 2" />
+              </div>
             </div>
-            <div class="hero-image">
-              <img
-                src="images\Wilderness_Whitetail_Limited_Edition_Skis-Product_Image.webp"
-                alt="Heroimage2"
-              />
-            </div>
-          </div>
-        </section>
+          </section>
+        </div>
 
         <!-- New Row of Products -->
         <section class="featured-products">
