--- a/Rynoridge/page3.html
+++ b/Rynoridge/page3.html
@@ -8,27 +8,86 @@
   </head>
   <body>
     <div id="content">
-      <header>
-        <div id="logo">
-          <img class="logo" src="images/Rhinologo.png" alt="Rynoridge Logo" />
-        </div>
-        <nav id="nav">
-          <a href="home.html">Home</a>
-          <a href="page2.html">Store</a>
-          <a href="page3.html">Gallery</a>
-          <a href="page4.html">Blog</a>
-          <a href="contactus.html">Contact Us</a>
-        </nav>
-      </header>
-      <main>
-        <section class="hero">
-          <div class="hero-text">
-            <h1>Rynoridge Gallery</h1>
-            <p>Discover breathtaking moments from our adventures.</p>
+      <div id="gallery-page">
+        <header>
+          <div id="logo">
+            <img class="logo" src="images/Rhinologo.png" alt="Rynoridge Logo" />
           </div>
-        </section>
-      </main>
-      <footer>
+          <nav id="nav">
+            <a href="home.html">Home</a>
+            <a href="page2.html">Store</a>
+            <a href="page4.html">Blog</a>
+            <a href="contactus.html">Contact Us</a>
+          </nav>
+        </header>
+        <main>
+          <section class="hero">
+            <div class="hero-content">
+              <div class="hero-text">
+                <h1>Rynoridge Gallery</h1>
+                <p>
+                  Discover breathtaking moments from our adventures. Our gallery showcases
+                  the beauty of winter sports and the passion of our community. Explore
+                  the stunning submissions from adventurers like you!
+                </p>
+              </div>
+              <div class="hero-image">
+                <img src="images\Lofsdalen20vinter202021_Anette20Andersson_39-CMSTemplate.webp" alt="Gallery Hero Image" />
+              </div>
+            </div>
+          </section>
+          <section class="gallery-grid">
+            <h2>Community Submissions</h2>
+            <p>Explore the beauty of winter sports through our community's lens. Send in your own photos via the contact us page to be featured!</p>
+            <p>(Click on any image to enlarge it)</p>
+            <div class="grid-container">
+              <div class="grid-item">
+                <img src="images/Uphill_HC_04-1024x683.jpeg" alt="Gallery Image 1" />
+              </div>
+              <div class="grid-item">
+                <img src="images/woman-enjoying-snowboarding-vivid-mountain-setting_23-2151513919.avif" alt="Gallery Image 2" />
+              </div>
+              <div class="grid-item">
+                <img src="images/ski-slopes-busy-SKITIPS1020-f3f41308ed1e40f1981489e8c4fa450c.jpg" alt="Gallery Image 3" />
+              </div>
+              <div class="grid-item">
+                <img src="images/people-like-us-23-4-1.webp" alt="Gallery Image 4" />
+              </div>
+              <div class="grid-item">
+                <img src="images/justinolsen_22_DSC06977_scaled_2400x0_c_default_5b6903d4-4598-46a2-a405-dc1db90db491.jpg" alt="Gallery Image 5" />
+              </div>
+              <div class="grid-item">
+                <img src="images/4.-Maximise-efficiency.jpg" alt="Gallery Image 6" />
+              </div>
+              <div class="grid-item">
+                <img src="images/CD1JohnsKids-28.jpg" alt="Gallery Image 7" />
+              </div>
+              <div class="grid-item">
+                <img src="images/Cyca_Skiing_Wikimedia_1800.jpeg" alt="Gallery Image 8" />
+              </div>
+              <div class="grid-item">
+                <img src="images/IMG_3111-scaled.avif" alt="Gallery Image 9" />
+              </div>
+              <div class="grid-item">
+                <img src="images/group-of-people-skiing-in-the-snow.jpg" alt="Gallery Image 10" />
+              </div>
+              <div class="grid-item">
+                <img src="images\skiing-snowboarding-knee-injuries.jpg" alt="Gallery Image 11" />
+              </div>
+              <div class="grid-item">
+                <img src="images\102-les-2-alpes-automne-hiver-snowpark-640x640.jpg" alt="Gallery Image 12" />
+            </div>
+          </section>
+
+          <!-- Enlarged Image Overlay -->
+          <div id="image-overlay" class="hidden">
+            <div class="overlay-content">
+              <button id="close-overlay">X</button>
+              <img id="overlay-image" src="" alt="Enlarged Image" />
+            </div>
+          </div>
+        </main>
+<footer>
         <div id="footer">
           <div id="footertext">
             <p>Rynoridge &copy; 2025 - Your Company Name</p>
@@ -49,8 +108,8 @@
               />
             </a>
           </div>
-        </div>
-      </footer>
+      </div>
     </div>
+    <script src="scripts/gallery.js"></script>
   </body>
 </html>
